# llm-rosetta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README_en.md  README_zh.md  complexipy-snapshot.json  pyproject.toml  rosetta-logo-preview.html
.agents/skills/inspect-rosetta-sessions/: SKILL.md
.agents/skills/rosetta-codex-readme-test/: SKILL.md
.github/workflows/: ci.yml  docker-safety.yml  docker.yml  release.yml  sdk-compatibility.yml
dev_scripts/: test_roundtrip_live.py
docker/: Dockerfile
docs/: audit-profile.md
docs/audit/: COVERAGE.md  FINDINGS.md  README.md  SYSTEM-MAP.md
docs/dev/: README.md  agent-tool-testing.md  releasing.md
docs/dev/version-compatibility/: README.md  codex-source-contract.json  compatibility-points.md  rosetta-source-map.md  upgrade-checklist.md
docs/en/: README.md  codex-model-catalog.md  gateway-security.md  version-compatibility.md
docs/en/codex-tool-localization/: basic-conversation.md  code-edit.md  other-tools.md
docs/en/tools/: real-agent-test-results.md
docs/zh-cn/: README.md  codex-model-catalog.md  gateway-security.md  version-compatibility.md
docs/zh-cn/codex-tool-localization/: basic-conversation.md  code-edit.md  other-tools.md  trace-qa.md
docs/zh-cn/tools/: real-agent-test-results.md
examples/gateway/: config.jsonc  requirements.txt
examples/rest_based/: cross_an_gg.py  cross_an_gg_stream.py  cross_an_or.py  cross_an_or_stream.py  cross_gg_or.py  cross_gg_or_stream.py  cross_oc_an.py  cross_oc_an_stream.py  cross_oc_gg.py  cross_oc_gg_stream.py  cross_oc_or.py  cross_oc_or_stream.py
examples/sdk_based/: cross_an_gg.py  cross_an_gg_stream.py  cross_an_or.py  cross_an_or_stream.py  cross_gg_or.py  cross_gg_or_stream.py  cross_oc_an.py  cross_oc_an_stream.py  cross_oc_gg.py  cross_oc_gg_stream.py  cross_oc_or.py  cross_oc_or_stream.py
scripts/: analyze_codex_jsonl_errors.py  check_codex_compatibility.py
src/codex_rosetta/: __init__.py  capabilities.py  pipeline.py  reasoning_mapping.py  routing.py
src/codex_rosetta/gateway/: app.py  cli.py  code_mode_projection.py  codex_auxiliary.py  codex_compaction.py  codex_images.py  codex_model_presets.json  codex_search.py  config.py  headers.py  inbound_content_encoding.py  local_mode.py  logging.py  model_presets.py  proxy.py  stream_phase_buffer.py  stream_trace.py  tool_adaptation.py  tool_profiles.py  web_run_sidecar.py  web_search.py
src/codex_rosetta/observability/: persistence.py  redaction.py  request_log.py
src/codex_rosetta/shims/: transforms.py
src/llm_rosetta/: __init__.py  auto_detect.py  capabilities.py  pipeline.py  reasoning_mapping.py  routing.py
src/llm_rosetta/_vendor/: httpserver.py  sse.py  validate.py
src/llm_rosetta/converters/: reasoning_helpers.py
src/llm_rosetta/gateway/: app.py  auth.py  config.py  embeddings.py  headers.py  providers.py  proxy.py  stream_trace.py  tool_adaptation.py
src/llm_rosetta/observability/: persistence.py
src/llm_rosetta/shims/: __init__.py  provider_shim.py  transforms.py
src/llm_rosetta/types/: __init__.py
tests/: conftest.py  test_analyze_codex_jsonl_errors.py  test_auto_detect.py  test_codex_source_contract.py  test_pipeline.py  test_provider_reasoning_transforms.py  test_reasoning_mapping.py  test_shim_loader.py  test_shim_pipeline.py  test_shims.py  test_tool_call_unwind.py  test_transforms.py
tests/agent_workspace/: README.md
tests/agent_workspace/builtin_tools/: EVALUATION.md  README.md
tests/agent_workspace/command_execution/: README.md
tests/agent_workspace/context_compaction/: EVALUATION.md  README.md
tests/agent_workspace/image_generation/: EVALUATION.md  README.md
tests/agent_workspace/namespace_tools/: EVALUATION.md  README.md
tests/agent_workspace/network_search/: EVALUATION.md  README.md
tests/converters/: test_image_limit.py  test_reasoning_helpers.py  test_strip_orphaned_tool_config.py  test_tool_caching.py
tests/converters/anthropic/: test_stream.py
tests/converters/base/: test_cache.py  test_conversion_context.py  test_tool_content.py  test_tools_sanitize.py
tests/converters/openai_chat/: test_message_ops.py  test_tool_ops.py
tests/converters/openai_responses/: test_config_ops.py  test_converter.py  test_message_ops.py  test_stream.py  test_tool_ops.py
tests/gateway/: conftest.py  test_admin_config_routes.py  test_admin_model_discovery_cleanup.py  test_admin_page_routes.py  test_admin_request_log.py  test_admin_tools_catalog.py  test_app_config_isolation.py  test_app_headers.py  test_auth.py  test_body_logging.py  test_chat_stream_eof_finalize.py  test_cli_local_mode.py  test_cli_logging.py  test_code_mode_projection.py  test_codex_auxiliary.py  test_codex_compaction.py  test_codex_search.py  test_config.py  test_downstream_routes.py  test_embeddings.py  test_health_endpoint.py  test_http_transport_limits.py  test_inbound_content_encoding.py  test_inbound_request_limits.py  test_local_mode.py  test_model_presets.py  test_persistence_sqlite.py  test_provider_return_redaction.py  test_providers.py  test_proxy_transforms.py  test_request_state_lifecycle.py  test_responses_passthrough.py  test_socks5_proxy.py  test_state_root_lifecycle.py  test_stream_phase_buffer.py  test_stream_telemetry_lifecycle.py  test_stream_trace.py  test_tool_adaptation.py  test_tool_profiles.py  test_transport_credential_redaction.py  (+5 more)
tests/integration/gpt_relay/: README.md  __init__.py  capture_proxy.py  evaluate.py  run.py  test_gpt_relay.py
tests/integration/gpt_relay/codex_harness/: Cargo.toml
tests/integration/gpt_relay/codex_harness/src/: main.rs
tests/live_agent/: README.md  runtime-contract.json  test_live_agent_configuration_contract.py
tests/live_agent/browser_use/: EVALUATION.md  README.md
tests/live_agent/context_compaction/: EVALUATION.md  README.md  run_live.py
tests/observability/: test_profiling.py  test_redaction.py
version-compatibility/: README.md  codex-source-contract.json  compatibility-points.md  upgrade-checklist.md
version-compatibility/reports/: 20260709-codex-v0.144.0.md  README.md
(+234 files in other folders)
