[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-rosetta"
dynamic = ["version"]
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "Codex-Rosetta: Unified LLM API adapter — bidirectional conversion between OpenAI, Anthropic, and Google formats via intermediate representation (IR)."
readme = "README.md"
requires-python = ">=3.14.6,<3.15"
license = "MIT"
keywords = [
    "openai",
    "anthropic",
    "gemini",
    "google-genai",
    "api-adapter",
    "llm-gateway",
    "llmir",
    "streaming",
    "tool-calling",
    "multi-provider",
    "responses-api",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai==2.45.0"]
anthropic = ["anthropic"]
google = ["google-genai"]
gateway = ["cryptography>=42.0.0"]
profiling = ["pyinstrument>=5.0.0"]
dev = [
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "pre-commit>=4.0.0",
    "complexipy==5.6.1",
    "ruff==0.15.20",
    "ty==0.0.54",
    "build>=1.2.2.post1",
]

all = ["codex-rosetta[openai,anthropic,google,gateway,profiling,dev]"]

[project.urls]
Documentation = "https://github.com/iBobbyTS/codex-rosetta/tree/main/docs"
Repository = "https://github.com/iBobbyTS/codex-rosetta"
Issues = "https://github.com/iBobbyTS/codex-rosetta/issues"

[project.scripts]
codex-rosetta-gateway = "codex_rosetta.gateway:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codex_rosetta" = ["py.typed", "shims/providers/*/provider.yaml", "shims/providers/*/*/provider.yaml"]
"codex_rosetta.gateway" = ["codex_models_0_144_1.json", "codex_model_presets.json"]
"codex_rosetta.gateway.admin" = ["admin.html", "tool_catalog.json"]

[tool.setuptools.dynamic]
version = { attr = "codex_rosetta.__version__" }

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
    "src",
    "tests",
    "scripts/analyze_codex_jsonl_errors.py",
    "scripts/check_codex_compatibility.py",
    "scripts/check_release_version.py",
]
exclude = ["src/codex_rosetta/_vendor", "llm_api_simple_tests", "tests/integration"]

[tool.ruff]
target-version = "py314"
exclude = ["src/codex_rosetta/_vendor", "llm_api_simple_tests", "tests/integration"]

[tool.ruff.lint]
select = ["E", "F", "UP", "C901"]
ignore = [
    "UP007",
    "UP017",
    "UP041",
    "UP046",
    "UP047",
    "E501",
]  # Keep existing syntax/style; enforce Python 3.14 compatibility.

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/codex_rosetta/_vendor/*" = ["C901", "UP"]

[tool.complexipy]
paths = ["src"]
max-complexity-allowed = 25
exclude = ["**/_vendor/**"]
